--- a/Portfolio/public/index.html
+++ b/Portfolio/public/index.html
@@ -20,7 +20,7 @@
       crossorigin="anonymous"
     />
     <link rel="icon" href="<%= BASE_URL %>favicon.ico"/>
-    <title><%= htmlWebpackPlugin.options.title %></title>
+    <title>DEVCOPS</title>
   </head>
   <body>
     <noscript>
