--- a/Portfolio/public/index.html
+++ b/Portfolio/public/index.html
@@ -19,7 +19,7 @@
       integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk"
       crossorigin="anonymous"
     />
-    <link rel="icon" href="<%= BASE_URL %>favicon1.ico"/>
+    <link rel="icon" href="favicon.ico" />
     <title>DEVCOPS</title>
   </head>
   <body>
@@ -47,6 +47,5 @@
       integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
       crossorigin="anonymous"
     ></script>
-    
   </body>
 </html>
